@@ -57,6 +57,7 @@ import java.io.InputStream;
 import java.util.Calendar;
 import java.util.Comparator;
 import java.util.Date;
+import java.util.List;
 import java.util.TimeZone;
 import javax.activation.MimetypesFileTypeMap;
 import org.json.JSONArray;
@@ -146,11 +147,15 @@ public class RequestTools {
 		UploadEvent uploadEvent = null;
 		try {
 		    uploadEvent = request.getUploadEvent();
-		    final UploadFile file = uploadEvent.getUploadFileByFieldName("file");
-		    if (null == file) {
+		    final UploadFile uploadFile;
+            {
+                final List<UploadFile> list = uploadEvent.getUploadFilesByFieldName("file");
+                uploadFile = null == list || list.isEmpty() ? null : list.get(0);
+            }
+		    if (null == uploadFile) {
 		        throw AjaxExceptionCodes.NO_UPLOAD_IMAGE.create();
 		    }
-		    setImageData(contact, file);
+		    setImageData(contact, uploadFile);
 		} finally {
 		    if (null != uploadEvent) {
 		        uploadEvent.cleanUp();
