@@ -128,22 +128,24 @@ public class AJAXInfostoreRequest implements InfostoreRequest {
 
     /**
      * Gets the value mapped to given parameter name.
-     * 
+     *
      * @param name The parameter name
      * @return The value mapped to given parameter name or <code>null</code> if not present
      * @throws NullPointerException If name is <code>null</code>
      */
+    @Override
     public String getParameter(final String name) {
         return data.getParameter(name);
     }
 
     /**
      * Gets the boolean value mapped to given parameter name.
-     * 
+     *
      * @param name The parameter name
      * @return The boolean value mapped to given parameter name or <code>false</code> if not present
      * @throws NullPointerException If name is <code>null</code>
      */
+    @Override
     public boolean getBoolParameter(final String name) {
         return AJAXRequestDataTools.parseBoolParameter(name, data);
     }
@@ -439,12 +441,15 @@ public class AJAXInfostoreRequest implements InfostoreRequest {
         }
 
         UploadFile uploadFile = null;
-        if(data.hasUploads()) {
+        if (data.hasUploads()) {
             uploadFile = data.getFiles().get(0);
         }
 
-        if(data.getUploadEvent() != null && data.getUploadEvent().getUploadFileByFieldName("file") != null) {
-            uploadFile = data.getUploadEvent().getUploadFileByFieldName("file");
+        if (data.getUploadEvent() != null) {
+            final List<UploadFile> list = data.getUploadEvent().getUploadFilesByFieldName("file");
+            if (list != null && !list.isEmpty()) {
+                uploadFile = list.get(0);
+            }
         }
 
         file = parser.parse(object);
