@@ -55,6 +55,7 @@ import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.sql.Connection;
 import java.util.Date;
+import java.util.List;
 import java.util.Locale;
 import javax.activation.MimetypesFileTypeMap;
 import org.json.JSONException;
@@ -242,11 +243,15 @@ public final class UpdateAction extends AbstractUserAction {
 		UploadEvent uploadEvent = null;
 		try {
 		    uploadEvent = request.getUploadEvent();
-		    final UploadFile file = uploadEvent.getUploadFileByFieldName("file");
-		    if (null == file) {
+		    final UploadFile uploadFile;
+            {
+                final List<UploadFile> list = uploadEvent.getUploadFilesByFieldName("file");
+                uploadFile = null == list || list.isEmpty() ? null : list.get(0);
+            }
+		    if (null == uploadFile) {
 		        throw AjaxExceptionCodes.NO_UPLOAD_IMAGE.create();
 		    }
-		    setImageData(contact, file);
+		    setImageData(contact, uploadFile);
 		} finally {
 		    if (null != uploadEvent) {
 		        uploadEvent.cleanUp();
